# clipdeck

./: .clang-format  .gitignore  CMakeLists.txt  TASKS.TXT
docs/: AI_CONTEXT.md
enc_temp_folder/b6e73a6032ef7934524dfdff3b7d9eb/: MainWindow.cpp
resources/: clipass.ini  config.txt  resource.h  resource.rc  settings.txt
resources/files/: eager.txt  lazy.txt  on-activation.txt
src/: AppConfig.cpp  AppConfig.h  ClipDeckApp.cpp  ClipDeckApp.h  ClipListView.cpp  ClipListView.h  ClipboardUtils.cpp  ClipboardUtils.h  GlobalHotkey.cpp  GlobalHotkey.h  HotkeyParser.cpp  HotkeyParser.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h  main.cpp  utils.h
winres/: resource.h  resource.rc
